fix: search path

--- a/.github/workflows/publish-docker-image-every-push.yml
+++ b/.github/workflows/publish-docker-image-every-push.yml
@@ -60,19 +60,24 @@ jobs:
           build-args: |
             CACHE_EXCHANGE_RATES_PERIOD=
             DISABLE_READ_API=false
-            API_PATH=/explorer
+            API_PATH=/
             NETWORK_PATH=/explorer
             DISABLE_WEBAPP=false
             DISABLE_WRITE_API=false
             CACHE_ENABLE_TOTAL_GAS_USAGE_COUNTER=
             WOBSERVER_ENABLED=false
-            ADMIN_PANEL_ENABLED=false
+            ADMIN_PANEL_ENABLED=true
             CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL=
-            DISABLE_BRIDGE_MARKET_CAP_UPDATER=false
+            DISABLE_BRIDGE_MARKET_CAP_UPDATER=true
             CACHE_BRIDGE_MARKET_CAP_UPDATE_INTERVAL=
             SOCKET_ROOT=/explorer
             CHAIN_ID=
             JSON_RPC=
-            COIN_NAME=Native Token            
+            COIN_NAME=Native Token     
+            COIN=NT
             SUBNETWORK=
+            DISABLE_EXCHANGE_RATES=true
+            SECRET_KEY_BASE=RMgI4C1HSkxsEjdhtGMfwAHfyT6CKWXOgzCboJflfSm4jeAlic52io05KB6mqzc5
+            ENABLE_TXS_STATS=true
+            SHOW_TXS_CHART=true
             LOGO=/explorer/images/blockscout_logo.svg
