feat: arm builds

--- a/.github/workflows/publish-docker-image-every-push-saas.yml
+++ b/.github/workflows/publish-docker-image-every-push-saas.yml
@@ -7,7 +7,7 @@ on:
 env:
   OTP_VERSION: "24.3.4.1"
   ELIXIR_VERSION: "1.13.4"
-  NEXT_RELEASE_VERSION: 4.1.9
+  NEXT_RELEASE_VERSION: 4.1.10
 
 jobs:
   push_to_registry:
@@ -55,7 +55,12 @@ jobs:
         with:
           context: .
           file: ./docker/Dockerfile
+          cache-from: type=registry,ref=ghcr.io/settlemint/blockscout:buildcache
+          cache-to: type=registry,ref=ghcr.io/settlemint/blockscout:buildcache,mode=max
           push: true
+          platforms: |
+            linux/arm64
+            linux/amd64
           tags: ghcr.io/settlemint/blockscout-saas:latest, ghcr.io/settlemint/blockscout-saas:${{ env.NEXT_RELEASE_VERSION }}-prerelease-${{ env.SHORT_SHA }}, ghcr.io/settlemint/blockscout-saas:${{ env.NEXT_RELEASE_VERSION }}
           build-args: |
             CACHE_EXCHANGE_RATES_PERIOD=
