--- a/.github/workflows/publish-docker-image-every-push.yml
+++ b/.github/workflows/publish-docker-image-every-push.yml
@@ -1,3 +1,5 @@
+#Trigger build
+
 name: Publish Docker image on every push to master branch
 
 on:
@@ -5,8 +7,8 @@ on:
     branches:
       - master
 env:
-  OTP_VERSION: '25.2.1'
-  ELIXIR_VERSION: '1.14.3'
+  OTP_VERSION: "25.2.1"
+  ELIXIR_VERSION: "1.14.3"
   RELEASE_VERSION: 5.1.5
 
 jobs:
